--- a/app/src/main/res/drawable/list_item_background.xml
+++ b/app/src/main/res/drawable/list_item_background.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:tint="#dadada">
-    <corners android:radius="8dp" />
-    <padding
-        android:top="4dp"
-        android:left="4dp"
-        android:bottom="4dp"
-        android:right="4dp" />
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+
+
+        <shape android:shape="rectangle">
+            <corners
+                android:radius="8dp" />
+            <padding
+                android:top="4dp"
+                android:left="4dp"
+                android:bottom="4dp"
+                android:right="4dp" />
+            <solid android:color="@color/white"/>
+            <stroke android:width="1dip" android:color="@color/black" />
+        </shape>
+    </item>
+</selector>
