--- a/app/src/main/res/layout/fragment_party.xml
+++ b/app/src/main/res/layout/fragment_party.xml
@@ -5,33 +5,65 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="views.PartyFragment">
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/textView"
+        <RelativeLayout
+            android:id="@+id/relativeLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="крои"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            />
+            android:layout_height="match_parent">
 
-        <GridView
-            android:id="@+id/gvParties"
-            android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="крои"
+                android:gravity="center_horizontal"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                />
+            <EditText
+                android:id="@+id/finder"
+                android:drawableEnd="@drawable/ic_search"
+                android:drawablePadding="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/title"
+                android:layout_marginHorizontal="10dp"
+                android:background="@drawable/edit_text_background"
+                android:elevation="5dp"
+                android:inputType="text"
+                android:hint="поиск..."
+                />
+            <GridView
+                android:id="@+id/gvParties"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/finder"
+                android:horizontalSpacing="5dp"
+                android:layout_marginTop="10sp"
+                android:numColumns="3"
+                android:layout_marginHorizontal="10dp"
+                android:verticalSpacing="5dp">
+
+            </GridView>
+        </RelativeLayout>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButton"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:numColumns="3"
-            android:verticalSpacing="5sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
-            />
+            android:clickable="true"
+            android:src="@drawable/ic_added"
+            android:layout_marginEnd="20sp"
+            android:layout_marginBottom="20sp"
+            app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
+            app:layout_constraintEnd_toEndOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </FrameLayout>
