--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -20,7 +20,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -43,6 +42,7 @@
                 android:id="@+id/etEmail"
                 android:drawableStart="@drawable/ic_people"
                 android:drawablePadding="10dp"
+                android:drawableTint="@color/color_icon_text"
                 android:background="@drawable/edit_text_background"
                 android:layout_width="match_parent"
                 android:layout_marginBottom="10dp"
@@ -60,6 +60,7 @@
                 android:layout_marginHorizontal="10dp"
                 android:layout_width="match_parent"
                 android:elevation="5dp"
+                android:drawableTint="@color/color_icon_text"
                 android:layout_marginBottom="10dp"
                 android:layout_height="wrap_content"
                 android:hint="Введите пароль*"
@@ -71,6 +72,7 @@
             android:id="@+id/btnEnter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+
             android:layout_gravity="right"
             android:elevation="5dp"
             android:text="Войти"/>
@@ -83,6 +85,8 @@
         android:layout_gravity="right"
         android:text="войти по QR коду"
         android:layout_marginHorizontal="20dp"
+        android:drawableStart="@drawable/ic_people"
+        android:drawableTint="@color/color_icon_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
