--- a/app/src/main/res/layout/fragment_package.xml
+++ b/app/src/main/res/layout/fragment_package.xml
@@ -5,11 +5,39 @@
     android:layout_height="match_parent"
     android:background="@color/light_white"
     tools:context=".views.PackageFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="hello package fragment" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="выкройки"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="поиск..."
+            android:drawableStart="@drawable/ic_search"
+            android:drawableTint="@color/color_icon_text"
+            android:background="@drawable/list_item_background"
+            android:elevation="10dp"
+            android:layout_marginBottom="8dp"
+            />
+
+        <ListView
+            android:id="@+id/package_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:divider="@null"
+            android:dividerHeight="8dp"
+            />
+
+    </LinearLayout>
+
 
 </FrameLayout>
