--- a/app/src/main/res/layout/fragment_package.xml
+++ b/app/src/main/res/layout/fragment_package.xml
@@ -40,9 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:divider="@null"
-            android:dividerHeight="8dp">
-
-        </ListView>
+            android:dividerHeight="8dp"/>
 
     </LinearLayout>
 
