--- a/app/src/main/res/layout/fragment_pincode.xml
+++ b/app/src/main/res/layout/fragment_pincode.xml
@@ -218,7 +218,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/button8" />
 
             <ImageButton
-                android:id="@+id/imageButton"
+                android:id="@+id/clearButton"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginTop="50dp"
