--- a/app/src/main/res/layout/pack_item_list.xml
+++ b/app/src/main/res/layout/pack_item_list.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_marginTop="5dp"
     android:background="@drawable/list_item_background"
     android:layout_height="wrap_content">
 
